force-app/main/default/objects/Event_Data_Object__c/Event_Data_Object__c.object-meta.xml
<CustomObject>
    <description>To be Deprecated: This object is used to capture the details such as room, equipment booked as part of the appointment.</description>
    <label>Event Data Object</label>
    <nameField>
        <displayFormat>ED-{0000}</displayFormat>
        <label>Event Data Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events Data Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>