force-app/main/default/objects/Event_Data_Object__c/fields/All_Day_event__c.field-meta.xml
<CustomField>
    <fullName>All_Day_event__c</fullName>
    <description>Indicates whether the event is an all-day event or not.</description>
    <defaultValue>false</defaultValue>
    <label>All Day event</label>
    <type>Checkbox</type>
</CustomField>