force-app/main/default/objects/Event_Data_Object__c/fields/AllUsers__c.field-meta.xml
<CustomField>
    <fullName>AllUsers__c</fullName>
    <description>Represents all users associated with the event.</description>
    <label>AllUsers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>