force-app/main/default/objects/Event_Data_Object__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <description>Specifies the User associated or assigned to the event.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events_Data_Object</relationshipName>
    <type>Lookup</type>
</CustomField>