force-app/main/default/objects/Event_Data_Object__c/fields/By_Pass_Check__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Check__c</fullName>
    <description>Flag to bypass certain checks related to the event.</description>
    <defaultValue>false</defaultValue>
    <label>By Pass Check</label>
    <type>Checkbox</type>
</CustomField>