force-app/main/default/objects/Event_Data_Object__c/fields/Co_Facilitators__c.field-meta.xml
<CustomField>
    <fullName>Co_Facilitators__c</fullName>
    <description>Lists co-facilitators involved in the event.</description>
    <label>Co-Facilitators</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>