force-app/main/default/objects/Event_Data_Object__c/fields/End_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_and_Time__c</fullName>
    <description>Captures the end date and time of the event.</description>
    <label>End Date and Time</label>
    <type>DateTime</type>
</CustomField>