force-app/main/default/objects/Event_Data_Object__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <description>Identifies the equipment associated with the event.</description>
    <label>Equipment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>