force-app/main/default/objects/Event_Data_Object__c/fields/Equipment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Quantity__c</fullName>
    <description>Indicates the quantity of equipment required for the event.</description>
    <label>Equipment Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>