force-app/main/default/objects/Event_Data_Object__c/fields/EquipmentLineItems__c.field-meta.xml
<CustomField>
    <fullName>EquipmentLineItems__c</fullName>
    <description>Tracks line items related to equipment for the event.</description>
    <label>EquipmentLineItems</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>