force-app/main/default/objects/Event_Data_Object__c/fields/IndirectRooms__c.field-meta.xml
<CustomField>
    <fullName>IndirectRooms__c</fullName>
    <description>Represents indirect rooms linked to the event.</description>
    <label>IndirectRooms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>