force-app/main/default/objects/Event_Data_Object__c/fields/JSON_Data__c.field-meta.xml
<CustomField>
    <fullName>JSON_Data__c</fullName>
    <description>Stores JSON data associated with the event.</description>
    <label>JSON Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>