force-app/main/default/objects/Event_Data_Object__c/fields/Patient_Groups__c.field-meta.xml
<CustomField>
    <fullName>Patient_Groups__c</fullName>
    <description>Lists patient groups associated with the event.</description>
    <label>Patient Groups</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>