force-app/main/default/objects/Event_Data_Object__c/fields/Patients__c.field-meta.xml
<CustomField>
    <fullName>Patients__c</fullName>
    <description>Records the patients involved in the event.</description>
    <label>Patients</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>