force-app/main/default/objects/Event_Data_Object__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <description>Specifies the practitioner associated with the event.</description>
    <label>Practitioner</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>