force-app/main/default/objects/Event_Data_Object__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Represents the location or provider associated with the event.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Provider__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Template_Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Events Data Object</relationshipLabel>
    <relationshipName>Events_Data_Object</relationshipName>
    <type>Lookup</type>
</CustomField>