force-app/main/default/objects/Event_Data_Object__c/fields/Related_Business_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Related_Business_Accounts__c</fullName>
    <description>Displays related business accounts for the event.</description>
    <label>Related Business Accounts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>