force-app/main/default/objects/Event_Data_Object__c/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <description>Represents the Rooms associated with the event.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rooms</label>
    <referenceTo>Rooms__c</referenceTo>
    <relationshipLabel>Events Data Object</relationshipLabel>
    <relationshipName>Events_Data_Object</relationshipName>
    <type>Lookup</type>
</CustomField>