force-app/main/default/objects/Event_Data_Object__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Captures the start date and time of the event.</description>
    <label>Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>