force-app/main/default/objects/Event_Data_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JSON_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>